# img2ascii

./: .gitignore  README.md  img2ascii.py  index.html  package-lock.json  package.json  requirements.txt
src/: App.vue  index.css
src-tauri/: Cargo.toml  ascii_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: TitleBar.vue
