[package]
name = "img2ascii-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "img2ascii_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
image = "0.25.9"
ab_glyph = "0.2.32"
imageproc = { version = "0.26.0", features = ["default"] }
tauri-plugin-dialog = "2.6.0"
rayon = "1.10.0"
parking_lot = "0.12.3"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"            # Link-time optimization for better inlining
codegen-units = 1      # Better optimization at cost of compile time
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, faster panic handling

